Login page refactored

--- a/src/app/features/auth/login/login.component.html
+++ b/src/app/features/auth/login/login.component.html
@@ -157,7 +157,7 @@
             <span class="checkbox-custom"></span>
             Remember me
           </label> -->
-          <a [routerLink]="['/auth/forgot-password']" class="forgot-link end">
+          <a [routerLink]="['/auth/forgot-password']" class="forgot-link">
             Forgot Password?
           </a>
         </div>
